--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -11,7 +11,41 @@
     <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
 
     <!-- TODO #1 - Use a loop to display job results in a table. -->
+    <head>
+        <style>
+        table, th, tr {
+  border: 1px solid black;
+}
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
 
+
+</style>
+    </head>
+    <table th:each="job : ${jobs}">
+           <tr>
+            <td>
+
+<!--                       <tr>-->
+<!--                           <th>ID: <span th:text="${job.id}"></span></th><br>-->
+<!--                           <th>Name: <span th:text="${job.name}"></span></th><br>-->
+<!--                           <th>Employer: <span th:text="${job.employer}"></span></th><br>-->
+<!--                           <th>Location: <span th:text="${job.location}"></span></th><br>-->
+<!--                           <th>Position Type: <span th:text="${job.positionType}"></span></th><br>-->
+<!--                           <th>Skills: <span th:text="${job.coreCompetency}"></span></th><br>-->
+<!--                       </tr>-->
+                   <label> ID: <span th:text="${job.id}"></span></label><br>
+                   <label> Name: <span th:text="${job.name}"></span></label><br>
+                   <label> Employer: <span th:text="${job.employer}"></span></label><br>
+                   <label> Location: <span th:text="${job.location}"></span></label><br>
+                   <label> Position Type: <span th:text="${job.positionType}"></span></label><br>
+                   <label> Skills: <span th:text="${job.coreCompetency}"></span></label><br>
+               </td>
+           </tr>
+</table>
 </div>
 
 </body>
